# python-pydantic-cython

./: README.md  pyproject.toml
python_pydantic_cython/: entrypoint.py
