[tool.poetry]
name = "python-pydantic-cython"
version = "0.1.0"
description = "Sample repo to illustrate use of pydantic with Cython"
authors = ["Sanjay BR <br.sanjay@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_pydantic_cython"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
cython = "^0.29.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
